new edit on comment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           rel="stylesheet" type="text/css">
     <style type="text/css">
 
-      /* Large desktop */
+      /* Large desktop My changes go here*/
       @media (min-width: 980px) { 
         body {
          padding-top: 60px;
